[gd_scene load_steps=3 format=3 uid="uid://bqx80a00k1m3n"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 28
font_color = Color(1, 1, 1, 1)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_pause")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ResumeButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Resume"
custom_minimum_size = Vector2(0, 50)

[node name="Spacer2" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="SettingsButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Settings"
custom_minimum_size = Vector2(0, 50)

[node name="Spacer3" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="MainMenuButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Main Menu"
custom_minimum_size = Vector2(0, 50)

[node name="Spacer4" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="QuitButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Quit Game"
custom_minimum_size = Vector2(0, 50) 